fixed overflowing pre element

--- a/castaway/hofstyles.css
+++ b/castaway/hofstyles.css
@@ -15,6 +15,10 @@ body {
 	word-wrap: break-word;
 }
 
+pre {
+    white-space: break-spaces;
+}
+
 .index>ul {
     height: 40vh;
     overflow-y: scroll;
@@ -104,7 +108,7 @@ body {
 }
 
 .post {
-    max-width: 70vw;  
+    max-width: 60vw;  
     padding-left: 5vw;
     padding-right: 5vw;
     padding-top: 20px;
@@ -115,9 +119,9 @@ body {
 
 @media (max-width:481px) {
 	.post {
-    max-width: 100vw;  
-    padding-left: 0;
-    padding-right: 0;
+        max-width: 100vw;  
+        padding-left: 10px;
+        padding-right: 10px;
 	}
 }
 
